<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_signup"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="com.kassem.mohamad.checkinclass.SignupActivity"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView android:src="@mipmap/checkin1"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />

            <EditText android:id="@+id/input_name_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:layout_marginTop="10dp"
                android:inputType="textCapWords"
                android:hint="@string/full_name"
                android:paddingLeft="20dp" />

            <EditText android:id="@+id/input_email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:hint="@string/hint_email" />

            <EditText android:id="@+id/input_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:hint="@string/hint_password"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/create_account"
                android:background="@drawable/button_shape"
                android:onClick="signup"/>

            <TextView android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/link_login"
                android:gravity="center"
                android:textSize="16dip"
                android:onClick="linkLogin"/>

        </LinearLayout>

</ScrollView>

